--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ nav a:hover::after{
 /* main */
 .head{
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     background-image: url(img/head.png);
     margin-top: 0.5%;
     padding-left: 50%;
@@ -206,6 +206,7 @@ nav a:hover::after{
     font-size: 1.4em;
     padding-bottom: 8%;
     font-family: 'Inter';
+    padding-right: 5%;
     
 }
 
@@ -285,7 +286,6 @@ nav a:hover::after{
     padding-bottom: 5%;
 }
 
-/* CARROSSEL */
 
 .container{
     width: 100%;
@@ -444,7 +444,9 @@ nav a:hover::after{
     color: #df7e07;
 }
 
-
+.imgBnfc{
+    width: 45vw;
+}
 /* SECTION MEMBRO */
 
 .membro{
@@ -457,11 +459,11 @@ nav a:hover::after{
 }
 
 .membro img{
-    width: 80%;
-    height: 100%;
+    width: 40vw;
+    height: 60vh;
     padding-right: none;
     padding-left: 0%;
-    margin-left: 28%;
+    margin-left: 10vw;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
     box-shadow: 8px 15px 20px -14px rgb(77, 77, 77);
@@ -474,6 +476,7 @@ nav a:hover::after{
    justify-content: center;
    padding-left: 15%;
    font-family: 'Poppins';
+   width: 80%;
 }
 
 .txtMembro strong{
@@ -563,13 +566,14 @@ nav a:hover::after{
 }
 
 .contato button{
-    width: 12vw;
+    width: 15vw;
     height: 7vh;
     font-size: 1.2em;
     border-radius: 20px;
     font-weight: 600;
     border: 2px solid #CC7105;
     color: #CC7105;
+    cursor: pointer;
 }
 
 .ctt:hover{
