--- a/Entrar/entre.css
+++ b/Entrar/entre.css
@@ -11,6 +11,7 @@
 
 /* Estilização */
 
+
 /* HEADER */
 body{
     width: 100%;
@@ -78,7 +79,7 @@ header{
     border: none;
     color: #fff;
     font-weight: 600;
-    width: 7vw;
+    width: 9vw;
     height: 5vh;
     border-radius: 20px;
     font-size: 15px;
@@ -208,17 +209,18 @@ main{
 }
 
 .conteudo{
-    margin-top: 10%;
+    margin-top: 20%;
 }
 
 .container h1{
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #d57907;
-    font-weight: 550;
+    color: #cf7404;
+    font-weight: 580;
     font-family: 'Inter';
     font-size: 2.4Vw;
+    padding-bottom: 5%;
 }
 
 .label{
@@ -268,7 +270,7 @@ label{
     padding-top: 5px;
 }
 
-.inpName, .inpEmail, .inpAssunto{
+.inpEmail, .inpSenha{
     border: none;
     width: auto;
     height: 4vh;
@@ -280,19 +282,15 @@ label{
     font-family:'Poppins';
 }
 
-.inpMsg{
-    border: none;
-    width: auto;
-    height: 15vh;
-    border-radius: 20px;
-    box-shadow: 0px 9px 20px -5px rgb(221, 218, 221);
-    outline: none;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    font-family:'Poppins';
-    
+/* SPAN */
+
+span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 15%;
+    cursor: pointer;
+    color: #ca7207;
 }
 
 
