--- a/Receitas/carne.css
+++ b/Receitas/carne.css
@@ -113,6 +113,11 @@ input{
     background-color: #df7e07;
 }
 
+header a{
+    text-decoration: none;
+    color: #fff;
+}
+
 /* NAVEGATION */
 nav {
     width: 100%;
@@ -161,6 +166,7 @@ nav a:hover::after{
     
 
 }
+
 
 
 
