--- a/Receitas/panqueca.css
+++ b/Receitas/panqueca.css
@@ -113,6 +113,11 @@ input{
     background-color: #df7e07;
 }
 
+header a {
+    text-decoration: none;
+    color: #fff;
+}
+
 /* NAVEGATION */
 nav {
     width: 100%;
@@ -182,7 +187,7 @@ nav a:hover::after{
 .titulo{
     background-color: #E78C22;
     color: #fff;
-    width: 30vw;
+    width: 35vw;
     height: 8vh;
     display: flex;
     align-items: center;
