--- a/Cadastro/cad.css
+++ b/Cadastro/cad.css
@@ -11,7 +11,6 @@
 
 /* Estilização */
 
-
 /* HEADER */
 body{
     width: 100%;
@@ -51,7 +50,7 @@ header{
     position: relative;
 }
 
-input{
+.pesq{
     width: 100%;
     height: 6vh;
     border-radius: 20px;
@@ -116,6 +115,7 @@ header a{
     text-decoration: none;
     color: #fff;
 }
+
 /* NAVEGATION */
 nav {
     width: 100%;
@@ -124,7 +124,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 9px 20px -4px rgba(184,182,184,1);
+    box-shadow: 0px 9px 20px -5px rgba(184,182,184,1);
 
 }
 
@@ -152,6 +152,7 @@ nav a::after{
     left: 0;
     transition: 0.5s ease-in-out;
     
+    
 }
 
 nav a{
@@ -178,102 +179,133 @@ nav a:hover::after{
     border-radius: 50px;
 }
 
-/* MAIN */
-.container h1{
+
+/*MAIN */
+
+main{
     display: flex;
     align-items: center;
-    align-content: center;
-    color: #fff;
-    padding-left: 8%;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    margin-top: 4%;
-    margin-bottom: 4%;
-    margin-left: 39%;
-    background-color: #df7e07;
-    width: 25%;
-    height: 6vh;
+    justify-content: center;
+    width: 100%;
+    padding-top: 5%;
+}
+.container{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    background-color: #fff;
+    width: 60%;
+    background-color: #EDEDED;
     border-radius: 20px;
-    font-weight: 500;
-    font-family: 'Inter';
-    box-shadow: -2px 5px 13px -4px rgba(102,102,102,1);
+    margin-bottom: 5%;
+    box-shadow: 10px 10px 33px -13px rgba(153,147,153,1);
+
+}
+
+.container img{
+    display: flex;
+    align-items: flex-start;
+    justify-content:left;
+    width: 100%;
+    height: 80vh;   
+    padding-left: 0%;
+    
 
     
 }
 
 .conteudo{
-    display: flex;
-    align-items: center;
-    padding-bottom: 10%;
-
+    margin-top: 10%;
 }
 
-.conteudo img{
-    width: 100%;
-    margin-left: 25%;
-    box-shadow: -2px 5px 13px 2px rgb(53, 47, 47);
-    border-radius: 20px;
-}
-
-.txtArea{
+.container h1{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-left: 15%;
-    width: 50%;
-    font-size: 1.5em;
+    color: #d57907;
+    font-weight: 550;
+    font-family: 'Inter';
+    font-size: 2.4Vw;
+}
+
+.label{
+    display: flex;
+    justify-content: center;
     flex-direction: column;
-}
-
-.btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    padding-right: 10%;
-
+    margin: 5%;
+    width: 80%;
+    padding-left: 10%;
+    
 }
 
 .conteudo button{
-    width: 12vw;
-    height: 5vh;
-    margin-top: 40%;
-    box-shadow: -2px 5px 13px -4px rgba(102,102,102,1);
-    cursor: pointer;
-    font-weight: 500;
-}
-
-.conteudo strong{
-    color: #df7e07;
-}
-
-.home{
-     background-color: #df7e07;
-     border: none;
-     border-radius: 20px;
-     color: #fff;
-     font-size: 1em;
-     font-family: 'Inter';
-     margin-right: 10%;
-}
-
-.contato{
-    background-color: #ccb807;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #df7e07;
     border: none;
-    border-radius: 20px;
     color: #fff;
-    font-size: 1em;
-    font-family: 'Inter';
-    margin-left: 10%;
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: 1.2em;
+    width: 10vw;
+    height: 4.5vh;
+    border-radius: 20px;
+    margin-right: 50%;
+    cursor: pointer;
+    box-shadow: 0px 9px 20px -5px rgba(184,182,184,1);
+
 }
 
-.home:hover{
-    background-color: #d17403;
+.enviar{
+    margin-left: 25%;
+    margin-top: 8%;
+    cursor: pointer;
 }
 
-.contato:hover{
-    background-color: #b7a507;
+.enviar:hover{
+    background-color: #cf7404;
 }
+
+label{
+    font-family:'Poppins';
+    font-weight: 600;
+    color: #d57907;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
+.inpName, .inpEmail, .inpSenha{
+    border: none;
+    width: auto;
+    height: 4vh;
+    border-radius: 20px;
+    box-shadow: 0px 9px 20px -5px rgb(221, 218, 221);
+    outline: none;
+    padding-left: 5%;
+    padding-right: 5%;
+    font-family:'Poppins';
+}
+
+.inpMsg{
+    border: none;
+    width: auto;
+    height: 15vh;
+    border-radius: 20px;
+    box-shadow: 0px 9px 20px -5px rgb(221, 218, 221);
+    outline: none;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    font-family:'Poppins';
+    
+}
+
+.conteudo button a{
+    text-decoration: none;
+    color: #fff;
+}
+
 
 
 /* FOOTER*/ 
