--- a/style.css
+++ b/style.css
@@ -529,6 +529,7 @@ nav a:hover::after{
     font-weight: 600;
     color: #fff;
     box-shadow: -2px 5px 13px -4px rgba(102,102,102,1);
+    cursor: pointer;
 }
 
 .cadMembro{
