--- a/Perfil/perfil.css
+++ b/Perfil/perfil.css
@@ -217,6 +217,8 @@ nav a:hover::after{
 }
 
 /* MAIN */
+
+
  input[type='file']{
     width: 100%;
     height: 25vh;
@@ -274,7 +276,7 @@ nav a:hover::after{
     position: absolute;
     width: 15vw;
     height: 15vw;
-    bottom: 30%;
+    bottom: 26%;
     left: 8%;
     cursor: pointer;
  }
@@ -287,9 +289,18 @@ nav a:hover::after{
 /* CONTEÚDO */
 .conteudo{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 35% 65%;
     flex-direction: row;
     width:100% ;
+}
+
+/*Nome de usuário */
+
+.infoContent > h1{
+    display: flex;
+    align-self: center;
+    font-family: 'Poppins';
+    color: #454343;
 }
 
 /*Section de Informações */
@@ -338,6 +349,36 @@ textarea:hover{
 }
 
 /* Área de favoritos */
+
+.favoritos{
+   margin-bottom: 50%;
+}
+
+.favoritos > h1{
+    padding-top: 3%;
+    font-family: 'Inter';
+    background-color: #df7e07;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 2.5vw;
+    height: 5%;
+    padding-bottom: 3%;
+    border-radius: 20px 0px 0px 20px;
+    margin-top: 4%;    
+    margin-bottom: 4%;
+}
+
+/* Fav Box */
+
+.favBox {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows:60% 60% 60% ;
+
+}
 
  /* FOOTER*/ 
  .footer{
