--- a/Entrar/entre.css
+++ b/Entrar/entre.css
@@ -510,7 +510,7 @@ footer li{
     }
     
     .inpEmail, .inpSenha{
-        height: 5vh !important;
+        height: 3vh !important;
 
     }
 
@@ -611,36 +611,34 @@ footer li{
 
     /* Box de Contato */
 
+    
     .container{
         width: 85%;
-        margin-bottom: 10%; 
         
 
     }
     
     .container img{
         width: 100%;
-        height: 50vh;     
-            
+        height: 52vh;          
     }
-
     
     .conteudo{
-        margin-top: 20%;
+        margin-top: 25%;
     }
     
     .container h1{
         color: #d57907;
         font-weight: 600;
-        font-size: 1.3em;
+        font-size: 1.5em;
     }
     
     .conteudo button{
         font-weight: 600;
-        font-size: 1em;
+        font-size: 1.2em;
         width: 25vw;
         margin-left: 15%; 
-        margin-top: 20%;
+        height: 3vh;
     }
 
     .label{
@@ -654,13 +652,13 @@ footer li{
     }
 
      .inpEmail, .inpSenha{
-        height: 4vh !important;
+        height: 2.6vh !important;
 
     }
 
     .conteudo > span {
         font-size: 12px;
-        margin-bottom: 10%;
+        margin-top: -12%;
     }
 
     /* FOOTER */
@@ -778,8 +776,30 @@ footer li{
         font-weight: 600;
         font-size: 1em;
         width: 15vw;
+        height: 3vh;
         margin-left: 20%; 
         margin-top: 15%;
     }
 
+    .container{
+        width: 60%;
+        
+
+    }
+
+    .container h1{
+        color: #d57907;
+        font-weight: 600;
+        font-size: 2em;
+        margin-top: -10%;
+    }
+    
+    .container img{
+        width: 100%;
+        height: 65vh;          
+    }
+
+    .conteudo > span {
+        margin-top: -10%;
+    }
 }
