--- a/style.css
+++ b/style.css
@@ -153,6 +153,11 @@ header a{
     text-decoration: none;
     color: #fff;
 }
+
+.menuMobile {
+    visibility: hidden;
+}
+
 /* NAVEGATION */
 nav {
     width: 100%;
@@ -654,3 +659,301 @@ footer li{
     display: flex;
 }
 
+/* Medias Queries*/
+
+/* Mobile */
+
+@media screen and (max-width: 500px) {
+
+    /*Header*/
+    header{
+        width: 100vw;
+        height: 20%;
+        background-size: 100% 100%;
+        
+        
+    
+    }
+    
+    .headerLogo{
+        padding-top: 0%;
+        padding-bottom: 0%;
+        margin-right: 2%;
+        margin-left: 2%;
+        cursor: pointer;
+        
+        
+    }
+
+    .headerLogo > a > img {
+        width: 15vw;
+    }
+    
+    .search{
+        display: flex;
+        flex-direction: row;
+        width: 50%;
+        top: 0;
+        position: relative;
+    }
+
+
+    
+    
+    input{
+        width: 100%;
+        height: 3vh !important;
+        border-radius: 20px;
+        position: relative; 
+        padding-left: 5%;
+        padding-right: 6%;
+    }  
+        
+    
+    .lupa{
+        display: flex;
+        margin: 5px;
+        width: 12px;
+        left: 84%;
+        bottom: 0.1%;
+        position: absolute;
+        cursor: pointer;
+    }
+    
+    /* --- */
+
+    .entre{
+        display: none;
+    }
+
+    
+
+    .cad{
+        display: none;
+
+    }
+
+    .menuMobile {
+        visibility: visible;
+        margin-right: 6%;
+        
+    }
+
+    .menuMobile > .fa-bars{
+        font-size: 1.4rem;
+    }
+
+    nav > ol {
+        display: none;
+    }
+
+    nav {
+        display: none;
+    }
+
+    /* Conteudo inicial */
+
+    .head {      
+        background-size: 100vw;
+        height: 150px;
+        width: 100%;
+        padding-left: 8%;
+        padding-right: 3%;
+        
+        
+    }
+
+    .head p {
+        font-size: 4vw;
+        text-align: justify;
+        padding-top: 20%;
+        margin-right: 0%; 
+    }
+
+    .head h1 {
+        font-size: 8vw;
+        width: 100%;
+        padding-left: 50%;
+        padding-top: 6%;
+        
+    }
+
+    .headCont{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    /* Botões */
+
+    .receitaBtn{
+        width: 34vw;
+        height: 5vh;       
+        font-size: 3.8vw;
+        font-weight: 560;
+        margin-right: 10%;
+
+        
+    }
+    
+    .cadBtn{
+        width: 34vw;
+        height: 5vh;
+        font-size: 3.8vw;
+        font-weight: 560;
+        margin-left: 10%;
+        
+    }
+
+    /* Recomendados */
+    .recomendados {
+        margin-top: 76%;
+    }
+
+    .recomendados h1 {
+        font-size: 8.5vw;
+        background-color: #edededb0;
+    }
+
+    .container{
+        width: 100%;
+        height: auto;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 60% 60%;
+        row-gap: 0px;
+        column-gap: 0px ;
+        margin-bottom: 44%;
+        margin-left: 2.5%;            
+    }
+    
+    .contSalada, .contLamen, .contPanqueca, .contPizza, .contCarne, .contCamarao, .contPeixe, .contTorta  {
+        background-color: #EEB968;
+        width: 45vw;
+        height: auto;
+        align-items: center;
+    }
+
+    .container h2 {
+        font-size: 6vw;
+        font-weight: 600;
+    }   
+
+    
+    .contSalada h2{
+        margin-top: 4%;
+        padding-left: 2.5%;
+        color: #fff;
+    }
+    
+    
+    .contTorta  h2{
+        margin-top: 5%;
+        padding-bottom: 15%;
+        padding-left: 2%;
+        color: #fff; 
+        text-align: center;
+    }
+    
+    .contLamen h2{
+        padding-left: 35%;
+        color: #fff;
+    }
+    
+   
+    
+    .contCarne h2{
+        padding-left: 2%;
+        color: #fff;
+        display: flex;
+        text-align: center;
+    }
+    
+    .contCamarao h2{
+        padding-left: 21%;
+        color: #fff;
+    }
+
+    /* Botões de receitas - card */
+
+    .container button{
+    width: 34vw;
+    height: 5vh;
+    font-size: 5vw;
+    color: #CC7105;
+    margin-left: 15%;
+    margin-bottom: 10%;
+}
+    
+
+    /* Section Cadastro */
+
+    .membro {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    /* Benefícios */
+    .beneficios {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .beneficios img {
+        width: 86vw;
+        margin-left: 7%;
+    }
+
+    .beneficios h2 {
+        margin-top: -90%;
+        margin-bottom: 65%;
+        font-size: 8.5vw;
+    }
+
+    .beneficios p {
+        font-size: 4vw;
+        text-align: justify;
+    }
+
+    /* Duvida/Sugestão */
+
+    .contato{
+        display: flex;
+        flex-direction: column;        
+    }
+
+    .contato h4{
+        font-size: 1.8em;
+        padding-bottom: 5%;
+    }
+    
+    .contato p{
+        font-size: 1.4em;
+    }
+      
+    
+    .contato img{
+        padding-left: 0%;
+        width: 45vw;
+    }
+    
+    .txtContato{
+       padding-right: 10%;
+    }
+    
+    .contato button{
+        width: 60vw;
+        height: 7vh;
+        font-size: 1.2em;
+        margin-bottom: 5%;
+        
+        
+    }
+
+
+    /* Seja Membro */
+    
+    
+
+
+}
