--- a/style.css
+++ b/style.css
@@ -536,7 +536,10 @@ nav a:hover::after{
     display: flex;
     width: 45vw;
     height: 8vh;
+    padding-top: 4%;
+    padding-right: 2%;
     padding-bottom: 2%;
+    padding-left: 2%;
     align-items: center;
     justify-content: center;
     margin-left: 30%;
