--- a/style.css
+++ b/style.css
@@ -665,6 +665,10 @@ footer li{
 
 @media screen and (max-width: 500px) {
 
+    body{
+        overflow-x: hidden;
+    }
+
     /*Header*/
     header{
         width: 100vw;
@@ -755,7 +759,7 @@ footer li{
 
     .head {      
         background-size: 100vw;
-        height: 150px;
+        height: 45vw;
         width: 100%;
         padding-left: 8%;
         padding-right: 3%;
@@ -886,12 +890,62 @@ footer li{
 }
     
 
-    /* Section Cadastro */
+    /* Section Cadastro  Membro*/
 
     .membro {
         display: flex;
         flex-direction: column-reverse;
+        
     }
+
+    .tituloMembro h2 {
+        font-size: 8.5vw;
+        width: 80vw;
+        height: 5.7vh;
+        margin-left: 10%;
+    }
+
+    .membro img{
+        width: 98vw;
+        height: 40vh;
+        margin-left: 0;
+        
+    }
+    
+    .txtMembro{
+       padding-left: 2.5%;
+       width: 100vw;
+    }
+
+   
+    
+    .txtMembro p{
+        width: 90vw;
+        margin-left: 6%;
+        font-size: 4vw;
+        text-align: justify !important;
+        padding-bottom: 6%;
+        font-family: 'Inter';
+
+        
+    }
+
+    .txtMembro h4 {
+        font-size:8.5vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 5%;
+    }
+    
+
+    .txtMembro a button {
+        width: 50vw;
+        font-size: 5vw;
+        margin-left: 24%;
+        margin-bottom: 12%;
+    }
+
 
     /* Benefícios */
     .beneficios {
@@ -900,35 +954,45 @@ footer li{
     }
 
     .beneficios img {
-        width: 86vw;
-        margin-left: 7%;
+        width: 70vw;
+        margin-left: 14%;
     }
 
     .beneficios h2 {
-        margin-top: -90%;
-        margin-bottom: 65%;
+        margin-top: -78%;
+        margin-bottom: 54%;
         font-size: 8.5vw;
     }
 
     .beneficios p {
         font-size: 4vw;
         text-align: justify;
+        padding-left: 0%;
+        margin-left: -5%;
     }
 
     /* Duvida/Sugestão */
 
     .contato{
         display: flex;
-        flex-direction: column;        
+        flex-direction: column;    
+        width: 100vw;    
     }
 
     .contato h4{
-        font-size: 1.8em;
-        padding-bottom: 5%;
+        font-size: 8vw;
+        padding-bottom: 10%;
+        margin-left: 12%;
+        font-family: 'Poppins';
+        text-align: center;
+        font-weight: bold;
     }
     
     .contato p{
-        font-size: 1.4em;
+        font-size: 4vw;
+        margin-left: 10%;
+        width: 94vw;
+        font-family: 'Inter';
     }
       
     
@@ -942,18 +1006,710 @@ footer li{
     }
     
     .contato button{
+        width: 52vw;
+        height: 6vh;
+        font-size: 5vw;
+        margin-bottom: 5%;
+        margin-left: 28%;
+        margin-bottom: 10%;
+        margin-top: 10%;
+        
+    }
+
+    /* COPYRIGHT */
+    .copyrigth > p {
+        font-size: 13px;
+    }
+
+    /* FOOTER*/ 
+    .footer{
+        height: 10vh;
+    }
+
+    .footerImg > a > img {
+        width: 20vw;
+        padding-top: 10%;
+        margin-left: 20%;
+    }
+
+    footer li{
+        font-size: 12px;
+    }
+
+    footer ul {
+        margin-left: -20%;
+    }
+    
+}
+
+@media screen and (min-width: 501px) and (max-width: 900px) {
+    header{
+        width: 100vw;
+        height: 20%;
+        background-size: 100% 100%;
+        
+    }
+        
+    
+    .headerLogo{
+        padding-top: 0%;
+        padding-bottom: 0%;
+        margin-right: 2%;
+        margin-left: 2%;
+        cursor: pointer;                   
+    }
+    
+    .headerLogo > a > img {
+        width: 15vw;
+    }
+
+    input{
+        height: 3.5vh !important;
+    }  
+        
+    
+    .lupa{
+        display: flex;
+        margin: 5px;
+        width: 3vw;
+        left: 88%;
+        bottom: 0.1%;
+        position: absolute;
+        cursor: pointer;
+    }
+    
+    /* --- */
+
+    .entre{
+        font-size: 1.5vw;
+        width: 12vw;
+        height: 4vh;
+        margin-left: 2%;
+    }
+
+    
+
+    .cad{
+        font-size: 1.5vw;
+        width: 18vw;
+        height: 4vh;
+
+    }
+
+    
+
+    nav > ol {
+        font-size: 1.7vw;
+    }
+
+    nav {
+        height: 5vh;
+    }
+
+    /* Duvidas ou sugestões */
+
+
+    .contato h4{
+        font-size: 4.5vw;
+        padding-bottom: 10%;
+        margin-left: 20%;
+        font-family: 'Poppins';    
+        font-weight: bold;
+        width: 50vw;
+    }
+    
+    .contato p{
+        font-size: 2.5vw;
+        margin-left: 20%;
+        width: 80vw;
+        font-family: 'Inter';
+        width: 50vw;
+
+    }
+      
+    
+    .contato img{
+        padding-left: 0%;
+        width: 40vw;
+
+    }
+    
+    .txtContato{
+       padding-right: 10%;
+    }
+    
+    .contato button{
+        width: 30vw;
+        height: 6vh;
+        font-size: 3vw;
+        margin-bottom: 5%;
+        margin-left: 40%;
+        margin-bottom: 10%;
+        margin-top: 10%;
+        
+    }
+
+    /* Cadastro & Membro */
+
+
+    .tituloMembro h2 {
+        font-size: 6vw;
         width: 60vw;
         height: 7vh;
-        font-size: 1.2em;
-        margin-bottom: 5%;
+        margin-left: 20%;
+        
+    }
+
+    .membro img{
+        width: 50vw;
+        height: 40vh;
+        margin-left: 0;
+        padding: 0;
+        margin-top: 10%;
+        
+    }
+    
+    .txtMembro{
+       padding-left: 2.5%;
+       width: 100vw;
+    }
+
+   
+    
+    .txtMembro p{
+        width: 40vw;
+        margin-left: 0%;
+        font-size: 2.5vw;
+        padding-bottom: 6%;
+        font-family: 'Inter';
+
+        
+    }
+
+    .txtMembro h4 {
+        font-size:5vw;
+        display: flex;
+        padding-top: 2%;
+        padding-left: 2%;
+    }
+    
+
+    .txtMembro a button {
+        width: 24vw;
+        font-size: 3vw;
+        margin-left: 15%;
+        margin-bottom: 12%;
+    }
+
+    /* Beneficios */
+
+    .beneficios img {
+        width: 42vw;
+        height: 34vh;
+        margin-left: 1.5%;
+        margin-right: 2%;
+        margin-top: 26%;
+ 
+    }
+
+    .beneficios h2 {
+        width: 62vw;
+        font-size: 5.8vw;
+        margin-right: 0;
+        margin-left: -85%;       
+    }
+
+    .beneficios p {
+        font-size: 2.5vw;
+        text-align: justify;
+        padding-left: 0%;
+        margin-left: -26%;
+        padding-top: 0;
+        width: 50vw;
+        
+    }
+
+    /* Recomendados */
+
+    .recomendados h1 {
+        font-size: 7vw;
+        padding-bottom: 0%;
+        
+    }
+
+    .container{
+        width: 100%;
+        height: auto;
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-rows: 100%;
+        row-gap: 0px;
+        column-gap: 0px ;
+        margin-bottom: 2%;
+        margin-left: 2.5%; 
+        margin-top: 0%;           
+    }
+    
+    .contSalada, .contLamen, .contPanqueca, .contPizza, .contCarne, .contCamarao, .contPeixe, .contTorta  {
+        background-color: #EEB968;
+        width: 20vw;
+        height: auto;
+        align-items: center;
+        margin-top: 20%;
+    }
+
+    .container h2 {
+        font-size: 3vw;
+        font-weight: 600;
+    }   
+
+    
+    .contSalada h2{
+        margin-top: 4%;
+        color: #fff;
+    }
+    
+    
+    .contTorta  h2{
+        margin-top: 5%;
+        padding-bottom: 0%;
+        padding-left: 2%;
+        color: #fff; 
+        text-align: center;
+    }
+    
+    .contLamen h2{
+        padding-left: 35%;
+        color: #fff;
+    }
+    
+   
+    
+    .contCarne h2{
+        padding-left: 2%;
+        color: #fff;
+        display: flex;
+        text-align: center;
+    }
+    
+    .contCamarao h2{
+        padding-left: 21%;
+        padding-bottom: 15%;
+        color: #fff;
+    }
+
+    /* Botões de receitas - card */
+
+    .container button{
+        width: 15vw;
+        height: 5vh;
+        font-size: 3vw;
+        color: #CC7105;
+        margin-left: 15%;
+        margin-bottom: 20%;
+    }
+
+    /* Parte inicial */
+
+    .head {      
+        background-size: 100vw;
+        height: 47vw;
+        max-height: 100vh;
         
         
     }
 
+    .head p {
+        font-size: 2vw;
+        text-align: justify;
+    }
 
-    /* Seja Membro */
+    .head h1 {
+        padding-top: 0%;
+        font-size: 4vw;
+        
+    }
+
+     /* Botões */
+
+     .receitaBtn{
+        width: 20vw;
+        height: 4vh;       
+        font-size: 2.5vw;
+        font-weight: 560;
+       
+
+        
+    }
+    
+    .cadBtn{
+        width: 20vw;
+        height: 4vh;
+        font-size: 2.5vw;
+        font-weight: 560;
+       
+        
+    }
+
+    html, body {
+        overflow-x: hidden;
+    }
+
+     /* FOOTER */
+     .footer {
+        height: 10vh;
+    }
+
+    .footerImg > a > img {
+        width: 15vw;
+        padding-top: 10%;
+        margin-left: 20%;
+        padding-right: 10%;
+    }
+
+    footer li{
+        font-size: 14px;
+    }
+
+    footer ul {
+        margin-left: -20%;
+    }
+
+}
+
+@media screen and (min-width: 901px) and (max-width: 1320px){
+    
+    header{
+        width: 100vw;
+        height: 24%;
+        background-size: 100% 100%;
+        
+    }
+        
+    
+    .headerLogo{
+        padding-top: 0%;
+        padding-bottom: 0%;
+        margin-right: 2%;
+        margin-left: 2%;
+        cursor: pointer;                   
+    }
+    
+    .headerLogo > a > img {
+        width: 10vw;
+        
+    }
+
+    input{
+        height: 3.5vh !important;
+        width: 70vw;
+        
+    }  
+        
+    
+    .lupa{
+        display: flex;
+        margin: 5px;
+        width: 18px;
+        left: 93%;
+        bottom: 0.1%;
+        position: absolute;
+        cursor: pointer;
+    }
+    
+    .search{
+        display: flex;
+        flex-direction: row;
+        width: 50%;
+        top: 0;
+        position: relative;
+    }
+     
+    /* --- */
+
+    .entre{
+        font-size: 1.5vw;
+        width: 12vw;
+        height: 4vh;
+        margin-left: 2%;
+    }
+
+    
+
+    .cad{
+        font-size: 1.5vw;
+        width: 18vw;
+        height: 4vh;
+
+    }
+
+    
+
+    nav > ol {
+        font-size: 1.4vw;
+    }
+
+    nav {
+        height: 5vh;
+    }
+
+    /* Parte inicial */
+
+    .head {      
+        background-size: 100vw;
+        height: 47vw;
+        max-height: 100vh;
+        
+        
+    }
+
+    .head p {
+        font-size: 2vw;
+        text-align: justify;
+    }
+
+    .head h1 {
+        padding-top: 0%;
+        font-size: 4vw;
+        
+    }
+
+     /* Botões */
+
+     .receitaBtn{
+        width: 18vw;
+        height: 6vh;       
+        font-size: 2vw;
+        font-weight: 560;
+              
+    }
+
+    .cadBtn{
+        width: 19vw;
+        height: 6vh;
+        font-size: 2vw;
+        font-weight: 560;
+       
+        
+    }
+
+    /* Recomendados */
+
+    .recomendados h1 {
+        font-size: 5vw;
+        padding-bottom: 0%;
+        
+    }
+
+    .container{
+        width: 100%;
+        height: auto;
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-rows: 100%;
+        row-gap: 0px;
+        column-gap: 0px ;
+        margin-bottom: 2%;
+        margin-left: 2.5%; 
+        margin-top: 0%;           
+    }
+    
+    .contSalada, .contLamen, .contPanqueca, .contPizza, .contCarne, .contCamarao, .contPeixe, .contTorta  {
+        background-color: #EEB968;
+        width: 21vw;
+        height: auto;
+        align-items: center;
+        margin-top: 20%;
+    }
+
+    .container h2 {
+        font-size: 2.4vw;
+        font-weight: 600;
+    }   
+
+    
+    .contSalada h2{
+        margin-top: 4%;
+        margin-left: -9%;
+        color: #fff;
+    }
     
     
+    .contTorta  h2{
+        margin-top: 5%;
+        padding-bottom: 0%;
+        padding-left: 2%;
+        color: #fff; 
+        text-align: center;
+    }
+       
+    .contCarne h2{
+        padding-left: 5%;
+        color: #fff;
+        display: flex;
+        text-align: center;
+        
+    }
+    
+    .contCamarao h2{
+        padding-left: 21%;
+        color: #fff;
+    }
+
+    /* Botões de receitas - card */
+
+    .container button{
+        width: 15vw;
+        height: 4.5vh;
+        font-size: 2vw;
+        color: #CC7105;
+        margin-left: 15%;
+        margin-bottom: 20%;
+    }
+
+    /* Beneficios */
+
+    .beneficios img {
+        width: 34vw;
+        height: 44vh;
+        margin-top: 25%;
+        margin-left: 30%;
+ 
+    }
+
+    .beneficios h2 {
+        width: 56vw;
+        font-size: 5vw;
+        margin-right: 0;
+        margin-left: -60%;       
+    }
+
+    .beneficios p {
+        font-size: 2vw;
+        text-align: justify;
+        padding-left: 0%;
+        margin-left: 0%;
+        margin-top: -2%;
+        width: 40vw;
+        
+    }
+
+    /* Cadastro & Membro */
 
 
+    .tituloMembro h2 {
+        font-size: 5vw;
+        width: 50vw;
+        height: 7vh;
+        margin-left: 26%;
+        
+    }
+
+    .membro img{
+        width: 50vw;
+        height: 50vh;
+        margin-left: 0;
+        padding: 0;
+        margin-top: -4%;
+        
+    }
+    
+    .txtMembro{
+       padding-left: 2.5%;
+       width: 100vw;
+    }
+
+   
+    
+    .txtMembro p{
+        width: 50vw;
+        margin-left: 0%;
+        font-size: 2vw;
+        padding-bottom: 6%;
+        font-family: 'Inter';
+
+        
+    }
+
+    .txtMembro h4 {
+        font-size:4vw;
+        display: flex;
+        padding-top: 2%;
+        padding-bottom: 5%;
+        padding-left: 2%;
+    }
+    
+
+    .txtMembro a button {
+        width: 20vw;
+        font-size: 2.5vw;
+        margin-left: 22%;
+        margin-bottom: 5%;
+    }
+
+    /* Duvidas ou sugestões */
+
+
+    .contato h4{
+        font-size: 3vw;
+        padding-bottom: 4%;
+        margin-left: 20%;
+        font-family: 'Poppins';    
+        font-weight: bold;
+        width: 50vw;
+    }
+    
+    .contato p{
+        font-size: 2vw;
+        margin-left: 20%;
+        width: 40vw;
+        font-family: 'Inter';
+        width: 50vw;
+
+    }
+      
+    
+    .contato img{
+        padding-left: 0%;
+        margin-left: 20%;
+        width: 30vw;
+
+    }
+    
+    .txtContato{
+       padding-right: 10%;
+    }
+    
+    .contato button{
+        width: 25vw;
+        height: 6vh;
+        font-size: 2.2vw;
+        margin-bottom: 5%;
+        margin-left: 40%;
+        margin-bottom: 10%;
+        margin-top: 10%;
+        
+    }
+
+
+    /* FOOTER */
+
+    .footerImg > a > img {
+        width: 10vw;
+        padding-top: 10%;
+        margin-left: 20%;
+        padding-right: 10%;
+    }
+
+    footer li{
+        font-size: 18px;
+    }
+
+    footer ul {
+        margin-left: -20%;
+    }
+
+    html, body {
+        overflow-x: hidden;
+    }
 }
