--- a/Receitapage/receita.css
+++ b/Receitapage/receita.css
@@ -26,7 +26,7 @@ header{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-image: url(img/header.png);
+    background-image: url(./img/header.png);
     background-size: 100%;
 
 }
